--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "tx-engine-example"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+log = "0.4"
+env_logger = "0.11"
 serde = { version = "1", features = ["derive"] }
 csv = "1"
 rust_decimal = { version = "1", features = ["serde"] }
